testsuite/tests/gnatcheck_errors/invalid_lkql_rules_config/compiler_rule_in_restricted_source.lkql
val rules = @{
    Goto_Statements
}

val ada_rules = @{
    Warnings: "a"
}
